@@ -93,7 +93,6 @@ typedef struct {
 	ALshort data;
 } AL_shortparam;
 
-
 typedef struct _AL_extension {
 	const ALubyte *name;
 	void *addr;
@@ -120,12 +119,12 @@ typedef struct _AL_bufsourcelist {
 typedef struct {
 	ALuint bid;         /* unique identifier */
 
-	void *orig_buffers[_ALC_MAX_CHANNELS];    /* original buffer: unadulturated */
-	ALuint num_buffers; /* number of populated channels in orig_buffers */
+	/* original data in unadulturated form */
+	void *orig_buffers[_ALC_MAX_CHANNELS];
 
 	Bufenum flags;
-	/* int refcount; */
 
+	/* format information of original data */
 	ALuint  size;
 	ALshort format;
 	ALuint  freq;
@@ -201,7 +200,7 @@ typedef struct _AL_source {
 		ssize_t new_soundpos;
 		ssize_t new_readindex;
 
-		void *outbuf;           /* buffer where output data is stored */
+		void *outbuf; /* buffer where output data is stored */
 		ALuint delay[_ALC_MAX_CHANNELS];
 		ALfloat gain[_ALC_MAX_CHANNELS];
 	} srcParams; /* values refreshed each iteration through SplitSources */
